--- a/firetest/www/src/test-app/test-autenticar.html
+++ b/firetest/www/src/test-app/test-autenticar.html
@@ -8,8 +8,18 @@
         display: block;
       }
     </style>
-   
     <div id="divAutenticar" style="display :{{design.Display}}">
+		<table cellpadding="0" cellspacing="0" style="width:100%;background-color: blue;">
+			   		<tr>
+				   		<td style="width:80%">
+				   		   	 <h2 style="width:100%;text-align: center;">Menus</h2>
+				   		</td>
+				   		
+			   		</tr>
+		</table>
+		    <br>
+		    <br>
+
        <h2>Introduzca Usuario y contrasena</h2>
       <paper-input label="{{design.txtUsuario.Label}}" value="{{datasource.txtUsuario}}"></paper-input>
       <paper-input label="{{design.txtContrasena.Label}}" value="{{datasource.txtContrasena}}"></paper-input>
