--- a/firetest/www/index.html
+++ b/firetest/www/index.html
@@ -16,12 +16,13 @@
     <link rel="import" href="../bower_components/polymerfire/firebase-app.html">
     <link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
     <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
+    <link rel="import" href="../bower_components/paper-card/paper-card.html">
 
 
 
     <link rel="import" href="/src/test-app/test-app.html">
   </head>
-  <body>
+  <body style=" margin: 0px 0px 0px 0px;">
     <test-app></test-app>
   </body>
 </html>
