--- a/firetest/www/index.html
+++ b/firetest/www/index.html
@@ -13,8 +13,13 @@
     <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../bower_components/paper-input/paper-input.html">
     <link rel="import" href="../bower_components/paper-button/paper-button.html">
+    <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
+    <link rel="import" href="../bower_components/paper-item/paper-item.html">
+    
      <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+       <link rel="import" href="../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
  <link rel="import" href="../bower_components/app-layout/app-layout.html">
+
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
 
@@ -48,12 +53,30 @@
     </custom-style>
   </head>
   <body style=" margin: 0px 0px 0px 0px;">
-   <app-toolbar>
-       <paper-icon-button icon="menu"></paper-icon-button>
-	    <div main-title>Olbapro</div>
-	    <paper-icon-button icon="search"></paper-icon-button>
-    </app-toolbar>
-    <test-app></test-app>
+	<app-drawer-layout>
+
+    <app-drawer slot="drawer">
+        <paper-listbox>
+		  <paper-item>Configuración</paper-item>
+		  <paper-item>Familias</paper-item>
+		</paper-listbox>
+    </app-drawer>
+
+    <app-header-layout>
+
+      <app-header reveals effects="waterfall" slot="header">
+        <app-toolbar>
+          <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
+          <div main-title>Olbapro</div>
+        </app-toolbar>
+      </app-header>
+
+      <div>    <test-app></test-app></div>
+
+    </app-header-layout>
+
+  </app-drawer-layout>
+
   </body>
   
 </html>
